:bulb: Docs: add user, sessions and meals on swagger paraments
