# back-pizza-store/src/docs/schemas/index.js
@@ -1,0 +1,9 @@
+const userSchema = require('./user')
+const sessionSchema = require('./sessions')
+const mealsSchema = require('./meals')
+
+module.exports = {
+  User: userSchema,
+  Sessions: sessionSchema,
+  Meals: mealsSchema
+}
