# back-pizza-store/src/docs/schemas/meals.js
@@ -1,0 +1,9 @@
+module.exports = {
+    "productImg": File,
+    "name": "Test Meal",
+    "ingredients": "Test ingredients", 
+    "description": "Write your products description", 
+    "price": 12.5, 
+    "category": ["almoço"], 
+    "created_by": 1
+}
