# back-pizza-store/src/docs/schemas/user.js
@@ -1,0 +1,5 @@
+module.exports = {
+  "name": "Frank",
+  "email": "frank@email.com",
+  "password": "12345678@"
+};
