# back-pizza-store/src/routes/users.routes.js
@@ -1,27 +1,25 @@
 const { Router } = require("express");
 const UsersController = require("../controllers/UsersController");
 const UserValidatedController = require("../controllers/UserValidatedController");
-const ensureAuthenticated = require('../middlewares/ensureAuthenticated')
+const ensureAuthenticated = require('../middlewares/ensureAuthenticated');
 
 const usersRoutes = Router();
 
 const usersController = new UsersController();
 const userValidatedController = new UserValidatedController();
 
-usersRoutes.post("/",
+usersRoutes.post("/", 
     /* #swagger.tags = ['users']
-       #swagger.description = 'Endpoint to create a new user.'
-       #swagger.parameters['users'] = {
-            in: 'body',
-            description: 'User information',
-            required: true,
-            schema: {
-                $name: 'Frank',
-                $email: 'frank@email.com',
-                $password: '12345678@'
-            }
-        } 
-    */ usersController.create);
+    #swagger.description = 'Endpoint to create a new user.'
+    #swagger.parameters['users'] = {
+         in: 'body',
+         description: 'User information',
+         required: true,
+         schema: { $ref: '#/definitions/User' }
+     } 
+ */  
+    usersController.create
+);
 usersRoutes.get("/validated", ensureAuthenticated, userValidatedController.index);
 
 module.exports = usersRoutes;
